ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 127.0.0.1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice1-svc
                port:
                  number: 80
          - path: /prajwal
            pathType: Prefix
            backend:
              service:
                name: microservice2-svc
                port:
                  number: 80
